my plag says now were working on it

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,125 +1,3 @@
-<div id="profile_card">
-    <div id="avatar_name">
-      <div>
-        <h2>
-          <%= @user.first_name %>
-            <% if @user.gender == "female"%>
-              <i class="fas fa-venus"></i>
-            <% else %>
-              <i class="fas fa-mars"></i>
-            <% end %>
-          <br>
-          <%= @user.last_name %>
-        </h2>
-      </div>
-      <i class="fas fa-user-circle fa-4x"></i>
-      <%# <img id="profile-picture"src="https://www.pinclipart.com/picdir/middle/148-1486972_mystery-man-avatar-circle-clipart.png" alt=""> %>
-    </div>
-    <div class="flexbox">
-      <div>
-        <p><i class="fas fa-envelope"></i> <%= @user.email %></p>
-        <p><i class="fas fa-phone"></i> +49 01575 8877956</p>
-      </div>
-      <i class="fas fa-cog tab-button"></i>
-    </div>
-  </div>
-
-
-<div id="tab-headers">
-  <div id="tab-1" onclick="tabOne()" class="select">
-    <h4>HOME</h4>
-  </div>
-  <div id="tab-2" onclick="tabTwo()">
-    <h4>REVIEWS</h4>
-  </div>
-  <div id="tab-3" onclick="tabThree()">
-    <h4>BOOKINGS</h4>
-  </div>
-</div>
-
-
-<%# tab HTML's %>
-
-<%# home tab HTML%>
-
-
-
-<div id="tab-1-content" class="select">
-  <div class="tab-card">
-    <h2>Latest booking</h2>
-    <ul>
-      <p><%= @current.created_at.strftime('%A, %d %b') %></p>
-      <% if @current.duration %>
-        <p><%= @current.created_at.strftime('%l:%M %p') %> - <%=  (@current.created_at + @current.duration.minutes).strftime('%l:%M %p') %></p>
-      <% else %>
-        <p>Still going...</p>
-      <% end %>
-      <p><%= @current.plug.location%></p>
-    </ul>
-      <h3 class="tab-button">Write Review <i class="far fa-keyboard"></i></h3>
-  </div>
-</div>
-
-
-<%# Reviewstab HTML %>
-
-<div id="tab-2-content">
-  <div class="tab-card">
-    <h3>Written Reviews <i class="fas fa-paper-plane"></i></h3>
-      <% @user.reviews.each do |review| %>
-        <ul>
-          <p><%= review.contents %></p>
-          <p><%= review.booking.created_at.strftime('%A, %d %b') %></p>
-        </ul>
-      <% end %>
-  </div>
-  <div class="tab-card">
-    <h3>Received Reviews <i class="fas fa-mail-bulk"></i></h3>
-    <% @user.reviews_as_owner.each do |review| %>
-        <ul>
-          <% num = review.rating.to_i %>
-            <% num.times do %>
-              <i class="fas fa-star"></i>
-            <% end %>
-            <% (5-num).times do %>
-              <i class="far fa-star"></i>
-            <% end %>
-          <p><%= review.contents %></p>
-          <p><%= review.booking.created_at.strftime('%A, %d %b') %></p>
-        </ul>
-    <% end %>
-  </div>
-</div>
-
-
-<%# Bookings-tab HTML %>
-
-
-<div id="tab-3-content">
-  <div class="tab-card">
-    <h3>Booking History <i class="fas fa-book"></i></h3>
-    <% @bookings.each do |booking| %>
-      <ul>
-        <p><%= booking.created_at.strftime('%A, %d %b') %></p>
-        <% if booking.duration %>
-          <p><%= booking.created_at.strftime('%l:%M %p') %> - <%=  (booking.created_at + booking.duration.minutes).strftime('%l:%M %p') %></p>
-        <% else %>
-          <p>Still going...</p>
-        <% end %>
-        <p><%= booking.plug.location%></p>
-      </ul>
-    <% end %>
-  </div>
-  <div class="tab-card">
-    <h3>Plug Booking History <i class="fas fa-charging-station"></i></h3>
-    <% @user.plugs.each do |plug| %>
-      <% plug.bookings.each do |booking| %>
-        <ul>
-          <p><%= booking.user.first_name %> <%= booking.user.last_name %></p>
-          <p><%= booking.created_at.strftime('%A, %d %b') %></p>
-          <p><%= booking.created_at.strftime('%l:%M %p') %> - <%=  (booking.created_at + booking.duration.minutes).strftime('%l:%M %p') %></p>
-        </ul>
-      <% end %>
-    <% end %>
-  </div>
+<div class="delete-this-after-demo">
+  <h2>Our Team is working on that Feature :)</h2>
 </div>
