changed seed for jesus users plugs

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,3 +1,5 @@
 <div class="delete-this-after-demo">
   <h2>Our Team is working on that Feature :)</h2>
 </div>
+
+<h2><%= @user.plugs.last.description %></h2>
