--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -6,12 +6,45 @@
   </div>
   <div class="booking-info" style="height: 30vh">
     <div class="booking-info-text">
-     <p><%= @plug.location %></p>
-     <p>Start-time: <%= @booking.created_at.strftime('%l:%M %p') %></p>
-     <p>Cost: $<%= @plug.fixed_cost_per_15_min %> per hour</p>
+      <p><%= @plug.location %></p>
+      <div class="booking-info-text-values">
+        <div class="booking-info-text-values-time">
+          <p>Start-time: <%= @booking.created_at.strftime('%l:%M %p') %></p>
+          <p id="time">00:00</p>
+        </div>
+        <div class="booking-info-text-values-cost">
+          <p>Cost: $<%= @plug.fixed_cost_per_15_min %> per 15min</p>
+          <p id="cost">$0.00</p>
+        </div>
+      </div>
     </div>
     <div class="stop-button">
       <%= link_to "Stop Booking", bookings_stop_path(@plug, @booking), class:"stop-button-press" %>
     </div>
   </div>
 </div>
+
+<script>
+  const timer = document.querySelector('#time');
+  const cost_calculation = document.querySelector('#cost')
+  const cost_per_15_min = <%= @plug.fixed_cost_per_15_min %>
+  const cost_per_second = cost_per_15_min / 900
+  let cost = 0
+  let seconds = 0;
+
+  setInterval(function () {
+    seconds += 1;
+    cost += cost_per_second
+    timer.innerText = formatTime(seconds);
+    cost_calculation.innerText = `$${String(cost.toFixed(2))}`
+  }, 1000);
+
+  function formatTime(seconds) {
+    const hours = Math.floor(seconds / 3600)
+    const minutes = Math.floor((seconds % 3600) / 60);
+    seconds = seconds % 60;
+    return (
+      String(hours).padStart(2, '0') + ':' + String(minutes).padStart(2, '0') + ':' + String(seconds).padStart(2, '0')
+    );
+  }
+</script>
