--- a/app/assets/stylesheets/components/_book_now_button.scss
+++ b/app/assets/stylesheets/components/_book_now_button.scss
@@ -3,6 +3,7 @@
   background-color: $default-red;
   color: white;
   width: 100%;
+  height: 40px;
   border-radius: 25px;
   font-weight: bold;
   font-size: large;
@@ -13,7 +14,6 @@
   border-color: $default-red;
   a {
     color: white;
-
-
+    text-decoration: none !important;
   }
 }
