--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,6 +1,7 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "back_button";
 @import "booking_tab";
 @import "current_booking";
 @import "dashboard_tab";
@@ -20,3 +21,4 @@
 @import "stop_button";
 @import "booking_info_text";
 @import "payment_page";
+@import "charger_card";
