--- a/app/assets/stylesheets/components/_logo.scss
+++ b/app/assets/stylesheets/components/_logo.scss
@@ -1,4 +1,6 @@
 .logo {
+  margin: 0px;
+  margin-left: 0 !important;
   padding-top: 70px;
   margin-top: 0px;
   margin-bottom: 30px;
@@ -7,5 +9,15 @@
     font-size: 20px;
     font-weight: 600;
     text-align: center;
+    margin: 0px;
+  }
+}
+
+.logo.charger {
+  padding-top: 36px;
+  h2 {
+    font-size: 30px;
+    color: rgb(114, 114, 114);
+    font-family: 'Poppins', sans-serif;
   }
 }
