--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -8,7 +8,15 @@
         <br>
         <%= link_to 'MY PROFILE', edit_user_registration_path %>
         <br>
-        <%= link_to 'MY CHARGER', dashboard_path %>
+        <% if current_user %>
+          <% if current_user.plugs == 0 %>
+            <%= link_to 'ADD A CHARGER', dashboard_path %>
+          <% elsif current_user.plugs.count == 1 %>
+            <%= link_to 'MY CHARGER', edit_plug_path(current_user.plugs.last) %>
+          <% else %>
+            <%= link_to 'MY CHARGERS', dashboard_path %>
+          <% end %>
+        <% end %>
         <br>
         <%= link_to 'SIGN OUT', destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" }, class: "submit-button" %>
       </div>
