--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,7 +16,7 @@
         <p><i class="fas fa-envelope"></i> <%= @user.email %></p>
         <p><i class="fas fa-phone"></i> +49 01575 8877956</p>
       </div>
-      <i id="profile-edit-button" class="fas fa-cog tab-button" onclick="editProfile()"></i>
+      <i class="fas fa-cog tab-button edit-button" onclick="editProfile()"></i>
     </div>
   </div>
 
