--- a/app/assets/stylesheets/components/_back_button.scss
+++ b/app/assets/stylesheets/components/_back_button.scss
@@ -8,7 +8,7 @@
   height: 45px;
   border-radius: 50%;
   background-color: $default-red;
-  position: absolute;
-  top: calc(100% - 100px);
+  position: fixed;
+  top: calc(100vh - 100px);
   left: 55px;
 }
