--- a/app/assets/stylesheets/components/_charger_card.scss
+++ b/app/assets/stylesheets/components/_charger_card.scss
@@ -6,10 +6,11 @@
   padding-bottom: 16px;
   background-color: white;
   box-shadow: 2px 2px 1px grey;
+  transition: 0.4s;
   h3 {
     text-align: center;
     font-size: 20px;
-    text-decoration: none;
+    text-decoration: none !important;
     color: rgb(114, 114, 114) !important;
     margin-bottom: 16px;
   }
@@ -20,13 +21,13 @@
     font-size: 12px;
     line-height: 4px;
   }
-  a {
-    text-decoration: none;
-  }
 }
 
 .charger-card:hover {
-  background-color: rgb(219, 219, 219);
+  // background-color: rgb(219, 219, 219);
+  // box-shadow: inset 2px 2px 1px grey;
+  transform: scale(1.01);
+  text-decoration: none;
 }
 
 .charger-card.show {
@@ -46,4 +47,5 @@
 
 .charger-card.show:hover {
   background-color: white;
+  transform: none;
 }
