--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -26,31 +26,37 @@
 
 
 <script>
-  // if (!!timer) {
-  //   let timer = document.querySelector('#time');
-  //   let cost_calculation = document.querySelector('#cost');
-  //   let cost_per_15_min = <%= @plug.fixed_cost_per_15_min %>
-  //   let cost_per_second = cost_per_15_min / 900
-  //   let cost = 0
-  //   let seconds = <%= @start_time.to_i %>;
-  // }
-  // setInterval(function () {
-  //   seconds += 1;
-  //   cost = seconds * cost_per_second
-  //   console.log(cost)
-  //   console.log(seconds)
-  //   timer.innerText = formatTime(seconds);
-  //   cost_calculation.innerText = `$${String(cost.toFixed(2))}`
-  // }, 1000);
+    let timer = undefined
+    let cost_calculation = undefined
+    let cost_per_15_min = undefined
+    let cost_per_second = undefined
+    let cost = undefined
+    let seconds = undefined
 
-  // function formatTime(seconds) {
-  //   const hours = Math.floor(seconds / 3600)
-  //   const minutes = Math.floor((seconds % 3600) / 60);
-  //   seconds = seconds % 60;
-  //   return (
-  //     String(hours).padStart(2, '0') + ':' + String(minutes).padStart(2, '0') + ':' + String(seconds).padStart(2, '0')
-  //   );
-  // }
+    timer = document.querySelector('#time');
+    cost_calculation = document.querySelector('#cost');
+    cost_per_15_min = <%= @plug.fixed_cost_per_15_min %>
+    cost_per_second = cost_per_15_min / 900
+    cost = 0
+    seconds = <%= @start_time.to_i %>
+
+  setInterval(function () {
+    seconds += 1;
+    cost = seconds * cost_per_second
+    console.log(cost)
+    console.log(seconds)
+    timer.innerText = formatTime(seconds);
+    cost_calculation.innerText = `$${String(cost.toFixed(2))}`
+  }, 1000);
+
+  function formatTime(seconds) {
+    const hours = Math.floor(seconds / 3600)
+    const minutes = Math.floor((seconds % 3600) / 60);
+    seconds = seconds % 60;
+    return (
+      String(hours).padStart(2, '0') + ':' + String(minutes).padStart(2, '0') + ':' + String(seconds).padStart(2, '0')
+    );
+  }
 
   // location.reload();
 
