--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -21,6 +21,6 @@
 @import "stop_button";
 @import "booking_info_text";
 @import "payment_page";
-@import "delete-this-after-demo";
-@import "booking_popup"
+@import "booking_popup";
 @import "charger_card";
+@import "stop_booking_page";
