--- a/app/assets/stylesheets/components/_map_search_bar.scss
+++ b/app/assets/stylesheets/components/_map_search_bar.scss
@@ -10,9 +10,16 @@
 }
 
 .mapboxgl-ctrl.mapboxgl-ctrl-group {
-    position: fixed;
-    bottom: 4rem;
-    right: 0.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: $default-red;
+  position: fixed;
+  top: calc(100vh - 100px);
+  left: 35px;
 }
 
 .mapboxgl-canvas {
