--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
       }
       function editPlug() {
         document.querySelector('.edit-button').classList.toggle("select");
-        document.querySelector('#edit-plug-field').classList.toggle("d-none");
+        document.querySelector('.input-field').classList.toggle("d-none");
         // document.querySelector('#edit-profile-field').classList.toggle("hide");
       }
     </script>
