--- a/app/views/plugs/edit.html.erb
+++ b/app/views/plugs/edit.html.erb
@@ -1,38 +1,50 @@
-<div class="logo charger"><h2><%= current_user.plugs.find(params[:id]).location %></h2></div>
-<div class="charger-card show">
-  <p><strong>Description:</strong> <%= current_user.plugs.find(params[:id]).description %></p>
-  <p><strong>Plug type:</strong> <%= current_user.plugs.find(params[:id]).plug_type %></p>
-  <p><strong>Cost:</strong> $<%= current_user.plugs.find(params[:id]).fixed_cost_per_15_min %> per 15 minutes</p>
-  <% if current_user.plugs.find(params[:id]).availability == 1 %>
-    <div class="tab-content-separator"></div>
-    <p style="text-align:center;font-weight:bold" >CURRENTLY BOOKED</p>
-  <% end %>
-  <div class="flexbox">
-    <%= link_to destroy_plug_path(params[:id]), method: :delete, data: { confirm: "Are you sure?" } do %>
-      <i class="fas fa-trash tab-button" style="width:28px;height:28px;font-size:14px;padding-top:7px;padding-left:8px"></i>
-    <% end %>
-    <i class="fas fa-cog tab-button edit-button" onclick="editPlug()"></i>
-  </div>
+<div class="logo charger">
+  <h3><%= @user.first_name %> <%= @user.last_name %>'s</h3>
+  <h2 style="margin-top:5px">Charger-page</h2>
+  <%# <div style="display:flex;justify-content:space-between;margin-top:5px;padding:0px 4px"><h2>C</h2><h2>H</h2><h2>A</h2><h2>R</h2><h2>G</h2><h2>E</h2><h2>R</h2><div style="width:10px"></div><h2>P</h2><h2>A</h2><h2>G</h2><h2>E</h2></div> %>
 </div>
+<%# <div style="padding-top:50px"> %>
+  <div id="plugshow">
+    <h2>Your <strong>TYPE <%= @plug.plug_type %></strong> Charger at <strong><%= @plug.location.upcase %></strong></h2>
+    <div class="tab-content-separator"></div>
+    <h3 style="margin-top:30px"><strong>The costs:</strong><br>Current costs: $<%= @plug.fixed_cost_per_15_min %>/15m</h3>
+    <br>
+    <h3><strong>It's description:</strong><br><%= @plug.description %></h3>
+    <div class="flexbox" style="width:60px;margin:35px auto;margin-top:50px">
+      <%= link_to destroy_plug_path(params[:id]), method: :delete, data: { confirm: "Are you sure you want to delete this charger?" } do %>
+        <i class="fas fa-trash tab-button" style="width:28px;height:28px;font-size:14px;padding-top:7px;padding-left:8px"></i>
+      <% end %>
+      <i class="fas fa-cog tab-button edit-button" onclick="editPlug()"></i>
+    </div>
+  </div>
+  <p style="font-size:13px;text-align:center;color:rgb(114, 114, 114)">Press + to add new chargers!</p>
+<%# </div> %>
 
-<div id="edit-plug-field" class="d-none">
+<div class="input-field d-none">
   <%= simple_form_for @plug do |f| %>
     <%= f.input :location,
       required: false,
+      autofocus: true,
       input_html: { autocomplete: "location" } %>
-    <%= f.input :description,
-      required: false,
-      input_html: { autocomplete: "description" } %>
     <%= f.input :fixed_cost_per_15_min,
       required: false,
+      autofocus: true,
+      as: :numeric,
       input_html: { autocomplete: "fixed_cost_per_15_min" } %>
     <%= f.input :plug_type,
+      collection: [1, 2],
       required: false,
       input_html: { autocomplete: "plug_type" } %>
-    <%= f.submit "Save changes" %>
+    <%= f.input :description,
+      required: false,
+      autofocus: true,
+      input_html: { autocomplete: "description" } %>
+    <div class="tab-content-separator"></div>
+    <div class="submit-buttons">
+      <%= f.button :submit, "Update" %>
+    </div>
   <% end %>
 </div>
-
 
 
 
