--- a/app/assets/stylesheets/components/_stop_booking_page.scss
+++ b/app/assets/stylesheets/components/_stop_booking_page.scss
@@ -1,4 +1,5 @@
 .tab-card-stop-booking {
+  text-align: center;
   border-radius: 8px;
   padding: 30px;
   margin-bottom: 30px;
@@ -7,4 +8,29 @@
   background-color: white;
   color: rgb(114, 114, 114);
   width: 19.5rem;
+}
+
+#review-button {
+  text-align: center;
+  background-color: $default-red;
+  color: white;
+  width: 100%;
+  height: 30px;
+  border-radius: 25px;
+  font-weight: bold;
+  font-size: large;
+  text-decoration: none;
+  border: red;
+  padding-top: .2rem;
+  padding-bottom: 2rem;
+  ;
+  border-color: $default-red;
+  a {
+    color: white;
+    text-decoration: none !important;
+  }
+}
+
+#add-review {
+  padding-top: 3rem;
 }
