--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,11 +2,11 @@
   <div class="logo">
     <h2>Order summary</h2>
   </div>
-  <div class="tab-card-stop-booking">
-    <p><%= @review.booking.duration %></p>
-    <p><%= @review.booking.cost %></p>
-    <button id="review-button">Write Review + <i class="far fa-keyboard"></i></button>
-    <div id="add-review" class="d-none">
+  <div class="tab-card-stop-booking" data-controller="new-review" data-new-review-seconds-value="<%= @review.booking.duration %>">
+    <p id="duration-booking" data-new-review-target="duration">Duration : 00:00:00</p>
+    <p>Cost : $<%= @review.booking.cost %></p>
+    <button id="review-button" data-new-review-target="tab">Write Review + <i class="far fa-keyboard"></i></button>
+    <div id="add-review" class="d-none" data-new-review-target="form">
       <%= simple_form_for [ @booking, @review ] do |f| %>
       <div class="form-inputs">
         <%= f.input :rating %>
@@ -25,11 +25,5 @@
 </div>
 
 <script>
-  const button = document.querySelector("#review-button")
-  const form = document.querySelector("#add-review")
 
-  button.addEventListener(("click"), (event) => {
-    form.classList.toggle("d-table")
-    form.classList.toggle("d-none")
-  })
 </script>
