--- a/app/assets/stylesheets/components/_stop_booking_page.scss
+++ b/app/assets/stylesheets/components/_stop_booking_page.scss
@@ -1,13 +1,30 @@
 .tab-card-stop-booking {
-  text-align: center;
   border-radius: 8px;
-  padding: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  padding-top: 40px;
   margin-bottom: 30px;
   margin-left: 30px;
   margin-right: 0px;
   background-color: white;
   color: rgb(114, 114, 114);
   width: 19.5rem;
+  h3 {
+    text-align: center;
+    font-family: 'Rajdhani', sans-serif;
+    font-size: 19px;
+    font-weight: 1000;
+  }
+  p {
+    text-align: center;
+    font-family: 'Rajdhani', sans-serif;
+    font-size: 19px;
+    font-weight: 400;
+  }
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 19px;
+  font-weight: 400;
 }
 
 #review-button {
@@ -23,6 +40,7 @@
   border: red;
   padding-top: .2rem;
   padding-bottom: 2rem;
+  margin-top: 1rem;
   ;
   border-color: $default-red;
   a {
@@ -31,6 +49,9 @@
   }
 }
 
+
 #add-review {
   padding-top: 3rem;
+  width: 96%;
+  margin-left: 6px;
 }
