--- a/app/views/plugs/edit.html.erb
+++ b/app/views/plugs/edit.html.erb
@@ -3,23 +3,52 @@
   <h2 style="margin-top:5px">Charger-page</h2>
   <%# <div style="display:flex;justify-content:space-between;margin-top:5px;padding:0px 4px"><h2>C</h2><h2>H</h2><h2>A</h2><h2>R</h2><h2>G</h2><h2>E</h2><h2>R</h2><div style="width:10px"></div><h2>P</h2><h2>A</h2><h2>G</h2><h2>E</h2></div> %>
 </div>
-<%# <div style="padding-top:50px"> %>
-  <div id="plugshow">
-    <h2>Your <strong>TYPE <%= @plug.plug_type %></strong> Charger at <strong><%= @plug.location.upcase %></strong></h2>
-    <div class="tab-content-separator"></div>
-    <h3 style="margin-top:30px"><strong>The costs:</strong><br>Current costs: $<%= @plug.fixed_cost_per_15_min %>/15m</h3>
-    <br>
-    <h3><strong>It's description:</strong><br><%= @plug.description %></h3>
-    <div class="flexbox" style="width:60px;margin:35px auto;margin-top:50px">
-      <%= link_to destroy_plug_path(params[:id]), method: :delete, data: { confirm: "Are you sure you want to delete this charger?" } do %>
-        <i class="fas fa-trash tab-button" style="width:28px;height:28px;font-size:14px;padding-top:7px;padding-left:8px"></i>
-      <% end %>
-      <i class="fas fa-cog tab-button edit-button" onclick="editPlug()"></i>
-    </div>
-  </div>
-  <p style="font-size:13px;text-align:center;color:rgb(114, 114, 114)">Press + to add new chargers!</p>
-<%# </div> %>
 
+<div id="plugshow">
+  <%# page content  %>
+  <h2>Your <span style="font-weight:600">TYPE <%= @plug.plug_type %></span> Charger at <span style="font-weight:600"><%= @plug.location.upcase %></span></h2>
+  <div class="tab-content-separator"></div>
+  <h3 style="margin-top:30px"><span style="font-weight:600">The costs:</span><br>Current costs: $<%= @plug.fixed_cost_per_15_min %>/15m</h3>
+  <br>
+  <h3><span style="font-weight:600">It's description:</span><br><%= @plug.description %></h3>
+  <br>
+  <%# for the average reviews  %>
+  <h3>
+    <span style="font-weight:600">Average rating:</span><br>
+    <% if @plug.reviews.count > 0 %>
+      <%# this is all for the average star rating from here... %>
+      <% total = 0 %>
+      <% @plug.reviews.each do |review| %>
+        <% total += review.rating %>
+      <% end %>
+      <% average = total / @plug.reviews.count %>
+      <% num = average.round %>
+      <% num.times do %>
+        <i class="fas fa-star small "></i>
+      <% end %>
+      <% (5-num).times do %>
+        <i class="far fa-star small "></i>
+      <% end %>
+      <br>
+      <%= @plug.reviews.count %> Ratings
+      <%# ...to here!  %>
+    <% else %>
+      Your plug has no ratings yet :(
+    <% end %>
+  </h3>
+
+  <%# for the two icons : %>
+  <div class="flexbox" style="width:60px;margin:35px auto;margin-top:50px">
+    <%= link_to destroy_plug_path(params[:id]), method: :delete, data: { confirm: "Are you sure you want to delete this charger?" } do %>
+      <i class="fas fa-trash tab-button" style="width:28px;height:28px;font-size:14px;padding-top:7px;padding-left:8px"></i>
+    <% end %>
+    <i class="fas fa-cog tab-button edit-button" onclick="editPlug()"></i>
+  </div>
+</div>
+<p style="font-size:13px;text-align:center;color:rgb(114, 114, 114)">Press + to add new chargers!</p>
+
+
+<%# the edit field  %>
 <div class="input-field d-none">
   <%= simple_form_for @plug do |f| %>
     <%= f.input :location,
@@ -50,7 +79,7 @@
 
 
 
-
+<%# the back button  %>
 <% if current_user.plugs.count > 1 %>
   <%= link_to dashboard_path do %>
     <div class="back-button" style="padding-right:3px;padding-bottom:2px"><i class="fas fa-angle-left"></i></div>
