--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -16,7 +16,7 @@
         <%= f.input :contents %>
       </div>
       <div class="tab-content-separator"></div>
-      <div class="submit-buttons">
+      <div class="submit-buttons" data-new-review-target="submit">
         <%= f.button :submit, "Create" %>
       </div>
       <% end %>
