changed from create to submit for form

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -17,7 +17,7 @@
       </div>
       <div class="tab-content-separator"></div>
       <div class="submit-buttons">
-        <%= f.button :submit, "Create" %>
+        <%= f.button :submit, "Submit" %>
       </div>
       <% end %>
     </div>
