--- a/app/views/plugs/_info_window.html.erb
+++ b/app/views/plugs/_info_window.html.erb
@@ -1,5 +1,6 @@
 <div class='info-window'>
   <div class="info-window-text">
+    <p>LOCATION: <%= plug.location %></p>
     <p>PLUG TYPE: <%= plug.plug_type %></p>
     <p>COST: $<%= plug.fixed_cost_per_15_min %> per hour</p>
     <p>DESCRIPTION: <%= plug.description %></p>
