--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -3,6 +3,8 @@
     <h2>Order summary</h2>
   </div>
   <div class="tab-card-stop-booking" data-controller="new-review" data-new-review-seconds-value="<%= @review.booking.duration %>">
+    <h3>Payment Successful</h3>
+    <div class="tab-content-separator"></div>
     <h3>Duration </h3>
     <p id="duration-booking" data-new-review-target="duration">00:00:00</p>
     <div class="tab-content-separator"></div>
