done with stripe

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -19,7 +19,10 @@
           <p data-booking-info-target="cost" id="cost">$0.00</p>
         </div>
       </div>
-      <div class="stop-button">
+      <div class="stop-button" data-booking-info-target="fakebutton">
+        <a class="stop-button-press" href="#"></a>
+      </div>
+      <div class="stop-button d-none" data-booking-info-target="realbutton">
         <%= link_to "Stop Booking", bookings_stop_path(@plug, @booking), class:"stop-button-press" %>
       </div>
     </div>
