--- a/app/views/bookings/approve.html.erb
+++ b/app/views/bookings/approve.html.erb
@@ -23,15 +23,18 @@
     <div class="submit-buttons">
       <%= link_to "Cancel", plugs_path %>
     </div>
+  </div>
 </div>
-</div>
+<div id="stripe-key" class="d-none"><%=ENV['STRIPE_PUBLISHABLE_KEY']%></div>
+<div id="plug-id" class="d-none"><%=@plug.id%></div>
 
-<script src="https://js.stripe.com/v3/"></script>
+
 <script>
-const stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>')
-const elements = stripe.elements()
-const cardElement = elements.create('card');
-cardElement.mount('#card-element');
+// const stripeKey = document.getElementById("stripe-key")
+// const stripe = Stripe(stripeKey)
+// const elements = stripe.elements()
+// const cardElement = elements.create('card');
+// cardElement.mount('#card-element');
 
 // const cardNumber = elements.create('cardNumber');
 // cardNumber.mount('#card-number')
@@ -40,26 +43,26 @@ cardElement.mount('#card-element');
 // const cardCvc = elements.create('cardCvc');
 // cardCvc.mount('#card-cvc')
 
-const cardholderName = document.getElementById('cardholder-name');
-const cardButton = document.getElementById('card-button');
-const resultContainer = document.getElementById('card-result');
+// const cardholderName = document.getElementById('cardholder-name');
+// const cardButton = document.getElementById('card-button');
+// const resultContainer = document.getElementById('card-result');
 
-cardButton.addEventListener('click', function(ev) {
-  console.log(cardElement)
-  stripe.createPaymentMethod({
-      type: 'card',
-      card: cardElement,
-      billing_details: {
-        name: cardholderName.value,
-      },
-    }
-  ).then(function(result) {
-    if (result.error) {
-      resultContainer.textContent = result.error.message;
-    } else {
-      // resultContainer.textContent = "Created payment method: " + result.paymentMethod.id;
-      location.assign(`http://${window.location.host}/create_payment_id/${<%= @plug.id %>}/${result.paymentMethod.id}`)
-    }
-  });
-});
+// cardButton.addEventListener('click', function(ev) {
+//   console.log(cardElement)
+//   stripe.createPaymentMethod({
+//       type: 'card',
+//       card: cardElement,
+//       billing_details: {
+//         name: cardholderName.value,
+//       },
+//     }
+//   ).then(function(result) {
+//     if (result.error) {
+//       resultContainer.textContent = result.error.message;
+//     } else {
+//       // resultContainer.textContent = "Created payment method: " + result.paymentMethod.id;
+//       location.assign(`http://${window.location.host}/create_payment_id/${<%= @plug.id %>}/${result.paymentMethod.id}`)
+//     }
+//   });
+// });
 </script>
